[gd_scene load_steps=24 format=2]

[ext_resource path="res://tabletop_club_logo.png" type="Texture" id=1]
[ext_resource path="res://icons/multiplayer_icon.svg" type="Texture" id=2]
[ext_resource path="res://fonts/res/main_menu_primary_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://icons/singleplayer_icon.svg" type="Texture" id=4]
[ext_resource path="res://main/main_menu_jukebox.tscn" type="PackedScene" id=5]
[ext_resource path="res://icons/settings_icon.svg" type="Texture" id=6]
[ext_resource path="res://fonts/res/main_menu_secondary_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://icons/credits_icon.svg" type="Texture" id=8]
[ext_resource path="res://icons/collection_icon.svg" type="Texture" id=9]
[ext_resource path="res://main/main_menu.gd" type="Script" id=10]
[ext_resource path="res://icons/quit_icon.svg" type="Texture" id=11]
[ext_resource path="res://icons/info_icon.svg" type="Texture" id=12]
[ext_resource path="res://icons/internet_icon.svg" type="Texture" id=13]
[ext_resource path="res://tools/vertical_button.gd" type="Script" id=14]
[ext_resource path="res://ui/quit_dialog.tscn" type="PackedScene" id=15]
[ext_resource path="res://ui/game_info_panel.tscn" type="PackedScene" id=16]
[ext_resource path="res://ui/credits_panel.tscn" type="PackedScene" id=17]
[ext_resource path="res://icons/back_icon.svg" type="Texture" id=18]
[ext_resource path="res://icons/leave_icon.svg" type="Texture" id=19]
[ext_resource path="res://ui/leave_dialog.tscn" type="PackedScene" id=20]
[ext_resource path="res://ui/website_panel.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=1]
resource_name = "FadeInMenu"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="MainContainer" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 40.0
margin_right = 20.0
margin_bottom = 40.0
grow_horizontal = 2

[node name="GameLogo" type="TextureRect" parent="MainContainer"]
margin_right = 600.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="WideGap" type="Control" parent="MainContainer"]
margin_top = 404.0
margin_right = 600.0
margin_bottom = 424.0
rect_min_size = Vector2( 600, 20 )

[node name="PrimaryContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 428.0
margin_right = 600.0
margin_bottom = 628.0

[node name="SingleplayerButton" type="Button" parent="MainContainer/PrimaryContainer"]
margin_right = 298.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 14 )
texture = ExtResource( 4 )
vertical_text = "Singleplayer"
font_override = ExtResource( 3 )

[node name="MultiplayerButton" type="Button" parent="MainContainer/PrimaryContainer"]
margin_left = 302.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 14 )
texture = ExtResource( 2 )
vertical_text = "Multiplayer"
font_override = ExtResource( 3 )

[node name="ReturnButton" type="Button" parent="MainContainer/PrimaryContainer"]
visible = false
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 14 )
texture = ExtResource( 18 )
vertical_text = "Return to Game"
font_override = ExtResource( 3 )

[node name="LeaveButton" type="Button" parent="MainContainer/PrimaryContainer"]
visible = false
margin_left = 302.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
script = ExtResource( 14 )
texture = ExtResource( 19 )
vertical_text = "Back to Main Menu"
font_override = ExtResource( 3 )

[node name="SecondaryContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 632.0
margin_right = 600.0
margin_bottom = 732.0

[node name="CollectionButton" type="Button" parent="MainContainer/SecondaryContainer"]
margin_right = 197.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
disabled = true
script = ExtResource( 14 )
texture = ExtResource( 9 )
vertical_text = "Collection"
font_override = ExtResource( 7 )

[node name="OptionsButton" type="Button" parent="MainContainer/SecondaryContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
script = ExtResource( 14 )
texture = ExtResource( 6 )
vertical_text = "Options"
font_override = ExtResource( 7 )

[node name="CreditsButton" type="Button" parent="MainContainer/SecondaryContainer"]
margin_left = 402.0
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
script = ExtResource( 14 )
texture = ExtResource( 8 )
vertical_text = "Credits"
font_override = ExtResource( 7 )

[node name="TertiaryContainer" type="HBoxContainer" parent="MainContainer"]
margin_top = 736.0
margin_right = 600.0
margin_bottom = 786.0

[node name="WebsiteButton" type="Button" parent="MainContainer/TertiaryContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
icon = ExtResource( 13 )
expand_icon = true

[node name="InfoButton" type="Button" parent="MainContainer/TertiaryContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
icon = ExtResource( 12 )
expand_icon = true

[node name="FillGap" type="Control" parent="MainContainer/TertiaryContainer"]
margin_left = 108.0
margin_right = 446.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="QuitButton" type="Button" parent="MainContainer/TertiaryContainer"]
margin_left = 450.0
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 7 )
text = "Quit"
icon = ExtResource( 11 )
expand_icon = true

[node name="MainMenuJukebox" parent="." instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
margin_top = 5.0
margin_right = -10.0
grow_horizontal = 0

[node name="CreditsPanel" parent="." instance=ExtResource( 17 )]
hide_on_popup = NodePath("../MainContainer")
focus_on_hide = NodePath("../MainContainer/SecondaryContainer/CreditsButton")

[node name="WebsitePanel" parent="." instance=ExtResource( 21 )]
visible = false
hide_on_popup = NodePath("../MainContainer")
focus_on_hide = NodePath("../MainContainer/TertiaryContainer/WebsiteButton")

[node name="GameInfoPanel" parent="." instance=ExtResource( 16 )]
hide_on_popup = NodePath("../MainContainer")
focus_on_hide = NodePath("../MainContainer/TertiaryContainer/InfoButton")

[node name="QuitDialog" parent="." instance=ExtResource( 15 )]
hide_on_popup = NodePath("../MainContainer")
focus_on_hide = NodePath("../MainContainer/TertiaryContainer/QuitButton")

[node name="LeaveDialog" parent="." instance=ExtResource( 20 )]
hide_on_popup = NodePath("../MainContainer")
focus_on_hide = NodePath("../MainContainer/PrimaryContainer/LeaveButton")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeInMenu = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="MainContainer/PrimaryContainer/SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="MainContainer/PrimaryContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="MainContainer/PrimaryContainer/LeaveButton" to="." method="_on_LeaveButton_pressed"]
[connection signal="pressed" from="MainContainer/SecondaryContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MainContainer/TertiaryContainer/WebsiteButton" to="." method="_on_WebsiteButton_pressed"]
[connection signal="pressed" from="MainContainer/TertiaryContainer/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="MainContainer/TertiaryContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="leaving_session" from="LeaveDialog" to="." method="_on_LeaveDialog_leaving_session"]
